[package]
name = "iced_aw"
version = "0.12.0"
authors = [
    "Kaiden42 <gitlab@tinysn.com>",
    "Andrew Wheeler <genusistimelord@gmail.com>",
]
edition = "2021"
description = "Additional widgets for the Iced GUI library"
license = "MIT"
homepage = "https://iced.rs"
repository = "https://github.com/iced-rs/iced_aw"
readme = "README.md"
keywords = ["gui", "graphics", "interface", "widgets", "iced"]
categories = ["gui"]
rust-version = "1.80"

[features]
badge = []
card = []
date_picker = ["chrono"]
color_picker = ["iced/canvas"]
grid = ["itertools"]
glow = []                                                  # TODO
tab_bar = []
tabs = ["tab_bar"]
time_picker = ["chrono", "iced/canvas"]
wrap = []
number_input = ["num-format", "num-traits", "typed_input"]
typed_input = []
selection_list = []
menu = []
quad = []
spinner = []
context_menu = []
slide_bar = []
drop_down = []
sidebar = []

default = [
    "badge",
    "card",
    "number_input",
    "date_picker",
    "color_picker",
    "grid",
    "tab_bar",
    "tabs",
    "time_picker",
    "slide_bar",
    "wrap",
    "selection_list",
    "quad",
    "context_menu",
    "spinner",
    "drop_down",
    "menu",
    "sidebar",
]

[dependencies]
cfg-if = "1.0"
chrono = { version = "0.4.38", optional = true, features = ["wasmbind"] }
getrandom = { version = "0.3.1" }
iced_fonts = { path = "../iced_fonts" }
itertools = { version = "0.14.0", optional = true }
num-format = { version = "0.4.4", optional = true }
num-traits = { version = "0.2.19", optional = true }
web-time = "1.1.0"

[dependencies.iced]
#git = "https://github.com/iced-rs/iced.git"
#rev = "b474a2b7a763dcde6a377cb409001a7b5285ee8d"
git = "https://github.com/iced-rs/iced.git"
default-features = false
features = ["advanced"]

[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
num-traits = "0.2.19" # For widget_id_return example
rand = "0.9.0"        # For wrap example

[dev-dependencies.iced]
#git = "https://github.com/iced-rs/iced.git"
#rev = "b474a2b7a763dcde6a377cb409001a7b5285ee8d"
git = "https://github.com/iced-rs/iced.git"
#default-features = false
features = ["advanced", "wgpu"]

[dev-dependencies.iced_aw]
path = "./"
default-features = false

[lib]
crate-type = ["cdylib", "rlib"]
